--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
+    android:background="#E7EBDA"
     android:fillViewport="false"
     android:orientation="vertical"
-    android:padding="3dp"
-    android:background="#E7EBDA">
+    android:padding="3dp">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#E7EBDA"
         android:orientation="vertical">
 
 
@@ -21,14 +22,16 @@
             android:inAnimation="@anim/slide_in_right"
             android:outAnimation="@anim/slide_out_left"></ViewFlipper>
 
-        <TextView
-            android:id="@+id/textView_abt"
+        <ViewFlipper
+            android:id="@+id/flipper2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/flipper1"
-            android:layout_marginTop="13dp"
-            android:text="@string/sample_text"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:layout_marginTop="15dp"
+            android:flipInterval="3000"
+            android:inAnimation="@anim/slide_in_right"
+            android:outAnimation="@anim/slide_out_left"></ViewFlipper>
+
 
     </RelativeLayout>
 </ScrollView>
