--- a/app/src/main/res/layout/tab_frag_tofrom.xml
+++ b/app/src/main/res/layout/tab_frag_tofrom.xml
@@ -18,7 +18,7 @@
             android:layout_height="90dp"
             android:layout_alignParentTop="true"
             android:scaleType="centerInside"
-            android:src="@drawable/maps" />
+            android:src="@drawable/bike_logo" />
 
 
         <RelativeLayout
