--- a/app/src/main/res/layout/simple_list_gasstation.xml
+++ b/app/src/main/res/layout/simple_list_gasstation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/imageView_img"
         android:layout_width="65dp"
         android:layout_height="75dp"
-        android:src="@drawable/maps"
+        android:src="@drawable/fuel_logo"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:scaleType="centerInside" />
