Code optimization and production apk release
Code optimized, unneeded files removed, comments and log clean up done.
Slight UI modification done.
Set reminder option added in View All page.
App URL provided for Rate App and Tell a Friend features. App moved to
production with version 1.8

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#E7EBDA"
+    android:background="#FCFBF1"
     android:fillViewport="false"
     android:orientation="vertical"
     android:padding="3dp">
@@ -10,7 +10,7 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#E7EBDA"
+        android:background="#FCFBF1"
         android:orientation="vertical">
 
 
