--- a/app/src/main/res/layout/activity_bikelist.xml
+++ b/app/src/main/res/layout/activity_bikelist.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="3dp">
+    android:padding="3dp">
 
     <ImageView
         android:id="@+id/imageView"
