--- a/app/src/main/res/menu/viewall_menu.xml
+++ b/app/src/main/res/menu/viewall_menu.xml
@@ -10,4 +10,9 @@
         android:icon="@drawable/share_ic"
         android:showAsAction="never"
         android:title="@string/action_share" />
+
+    <item
+        android:id="@+id/action_remind"
+        android:showAsAction="never"
+        android:title="@string/action_reminder" />
 </menu>
