--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,161 +2,157 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-          <item name="android:popupMenuStyle">@style/popupMenu</item>
-     </style>
+        <!-- <item name="android:popupMenuStyle">@style/popupMenu</item> -->
+    </style>
 
-     <style name="popupMenu">
-         <item name="android:popupBackground">#E7EBDA</item>
-         <!--  <item name="android:itemTextAppearance">@android:color/background_light</item>
-          <item name="android:actionMenuTextColor">@android:color/background_light</item>
-          <item name="android:textColor">@android:color/background_light</item> -->
+    <style name="popupMenu">
+        <item name="android:popupBackground">#E7EBDA</item>
+    </style>
 
-      </style>
+    <style name="splashText">
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#555555</item>
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">2dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
 
-      <style name="splashText">
-          <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
-          <item name="android:textSize">30dp</item>
-          <item name="android:layout_width">wrap_content</item>
-          <item name="android:layout_height">wrap_content</item>
-          <item name="android:textStyle">bold</item>
-          <item name="android:textColor">#555555</item>
-          <item name="android:paddingLeft">2dp</item>
-          <item name="android:paddingRight">2dp</item>
-          <item name="android:paddingTop">2dp</item>
-          <item name="android:paddingBottom">2dp</item>
-      </style>
+    <style name="bikeText">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal|bold</item>
+        <item name="android:textColor">#003366</item>
+        <item name="android:gravity">left</item>
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">2dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
 
-      <style name="bikeText">
-          <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-          <item name="android:textSize">20dp</item>
-          <item name="android:layout_width">wrap_content</item>
-          <item name="android:layout_height">wrap_content</item>
-          <item name="android:textStyle">normal|bold</item>
-          <item name="android:textColor">#003366</item>
-          <item name="android:gravity">left</item>
-          <item name="android:paddingLeft">2dp</item>
-          <item name="android:paddingRight">2dp</item>
-          <item name="android:paddingTop">2dp</item>
-          <item name="android:paddingBottom">2dp</item>
-      </style>
+    <style name="bikeName">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal|bold</item>
+        <item name="android:textColor">#282828</item>
+        <item name="android:gravity">left</item>
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">2dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
 
-      <style name="bikeName">
-          <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-          <item name="android:textSize">18dp</item>
-          <item name="android:layout_width">wrap_content</item>
-          <item name="android:layout_height">wrap_content</item>
-          <item name="android:textStyle">normal|bold</item>
-          <item name="android:textColor">#282828</item>
-          <item name="android:gravity">left</item>
-          <item name="android:paddingLeft">2dp</item>
-          <item name="android:paddingRight">2dp</item>
-          <item name="android:paddingTop">2dp</item>
-          <item name="android:paddingBottom">2dp</item>
-      </style>
+    <style name="SubText">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#555555</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">2dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
 
-      <style name="SubText">
-          <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-          <item name="android:textSize">15dp</item>
-          <item name="android:layout_width">wrap_content</item>
-          <item name="android:layout_height">wrap_content</item>
-          <item name="android:textStyle">normal</item>
-          <item name="android:textColor">#555555</item>
-          <item name="android:gravity">left</item>
-          <item name="android:layout_marginTop">6dp</item>
-          <item name="android:paddingLeft">2dp</item>
-          <item name="android:paddingRight">2dp</item>
-          <item name="android:paddingTop">2dp</item>
-          <item name="android:paddingBottom">2dp</item>
-      </style>
+    <style name="MapSubText">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">11dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#555555</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:paddingLeft">2dp</item>
+    </style>
 
-      <style name="MapSubText">
-          <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-          <item name="android:textSize">11dp</item>
-          <item name="android:layout_width">wrap_content</item>
-          <item name="android:layout_height">wrap_content</item>
-          <item name="android:textStyle">normal</item>
-          <item name="android:textColor">#555555</item>
-          <item name="android:gravity">left</item>
-          <item name="android:layout_marginTop">6dp</item>
-          <item name="android:paddingLeft">2dp</item>
-      </style>
+    <style name="ExpSubText">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">13dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#555555</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:paddingLeft">2dp</item>
+    </style>
 
-      <style name="ExpSubText">
-          <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-          <item name="android:textSize">13dp</item>
-          <item name="android:layout_width">wrap_content</item>
-          <item name="android:layout_height">wrap_content</item>
-          <item name="android:textStyle">normal</item>
-          <item name="android:textColor">#555555</item>
-          <item name="android:gravity">left</item>
-          <item name="android:layout_marginTop">6dp</item>
-          <item name="android:paddingLeft">2dp</item>
-      </style>
+    <style name="DetailText">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#003366</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginTop">14dp</item>
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">2dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
 
-      <style name="DetailText">
-          <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-          <item name="android:textSize">18dp</item>
-          <item name="android:layout_width">wrap_content</item>
-          <item name="android:layout_height">wrap_content</item>
-          <item name="android:textStyle">normal</item>
-          <item name="android:textColor">#003366</item>
-          <item name="android:gravity">left</item>
-          <item name="android:layout_marginTop">14dp</item>
-          <item name="android:paddingLeft">2dp</item>
-          <item name="android:paddingRight">2dp</item>
-          <item name="android:paddingTop">2dp</item>
-          <item name="android:paddingBottom">2dp</item>
-      </style>
+    <style name="ExpText">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#A5685B</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginTop">14dp</item>
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">2dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
 
-      <style name="ExpText">
-          <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-          <item name="android:textSize">16dp</item>
-          <item name="android:layout_width">wrap_content</item>
-          <item name="android:layout_height">wrap_content</item>
-          <item name="android:textStyle">normal</item>
-          <item name="android:textColor">#A5685B</item>
-          <item name="android:gravity">left</item>
-          <item name="android:layout_marginTop">14dp</item>
-          <item name="android:paddingLeft">2dp</item>
-          <item name="android:paddingRight">2dp</item>
-          <item name="android:paddingTop">2dp</item>
-          <item name="android:paddingBottom">2dp</item>
-      </style>
+    <style name="MapText">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">13dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#003366</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginTop">3dp</item>
+        <item name="android:paddingLeft">2dp</item>
+    </style>
 
-      <style name="MapText">
-          <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-          <item name="android:textSize">13dp</item>
-          <item name="android:layout_width">wrap_content</item>
-          <item name="android:layout_height">wrap_content</item>
-          <item name="android:textStyle">normal</item>
-          <item name="android:textColor">#003366</item>
-          <item name="android:gravity">left</item>
-          <item name="android:layout_marginTop">3dp</item>
-          <item name="android:paddingLeft">2dp</item>
-      </style>
+    <style name="view">
+        <item name="android:background">#48a3d6</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginTop">2dp</item>
+    </style>
 
-      <style name="view">
-          <item name="android:background">#48a3d6</item>
-          <item name="android:layout_width">fill_parent</item>
-          <item name="android:layout_height">1dp</item>
-          <item name="android:layout_marginLeft">10dp</item>
-          <item name="android:layout_marginRight">10dp</item>
-          <item name="android:layout_marginTop">2dp</item>
-      </style>
+    <style name="viewlist">
+        <item name="android:background">#48a3d6</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:layout_marginTop">2dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
 
-      <style name="viewlist">
-          <item name="android:background">#48a3d6</item>
-          <item name="android:layout_width">fill_parent</item>
-          <item name="android:layout_height">0.5dp</item>
-          <item name="android:layout_marginTop">2dp</item>
-          <item name="android:layout_marginRight">10dp</item>
-      </style>
+    <style name="padding">
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">2dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
 
-      <style name="padding">
-          <item name="android:paddingLeft">2dp</item>
-          <item name="android:paddingRight">2dp</item>
-          <item name="android:paddingTop">2dp</item>
-          <item name="android:paddingBottom">2dp</item>
-      </style>
-
-  </resources>
+</resources>
