--- a/app/src/main/res/layout/bike_fragment.xml
+++ b/app/src/main/res/layout/bike_fragment.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="54dp"
         android:text="@string/sample_text" />
 
-    <com.reft.admin.royalenfield.misc.ScaleImageView
+    <com.reft.admin.ridersdelight.misc.ScaleImageView
         android:id="@+id/imageView_bike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
