Connection check code added
Internet connection check code added in Plan my Trip & Find Gas Station
tabs. Latest APK uploaded to playstore.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,8 +2,10 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- <item name="android:popupMenuStyle">@style/popupMenu</item> -->
+        <!-- Customize your theme here. -->
+
     </style>
+
 
     <style name="popupMenu">
         <item name="android:popupBackground">#E7EBDA</item>
