--- a/app/src/main/res/layout/fragment_himalayan.xml
+++ b/app/src/main/res/layout/fragment_himalayan.xml
@@ -39,8 +39,8 @@
 
                 <ImageView
                     android:id="@+id/imageview1"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:scaleType="fitXY"
@@ -51,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_margin="8dp"
+                    android:layout_marginLeft="4dp"
                     android:layout_toEndOf="@+id/imageview1"
                     android:layout_toRightOf="@+id/imageview1"
                     android:text="The reveal of Himalayan"
@@ -88,8 +88,8 @@
 
                 <ImageView
                     android:id="@+id/imageview2"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:scaleType="fitXY"
@@ -100,7 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_margin="8dp"
+                    android:layout_marginLeft="4dp"
                     android:layout_toEndOf="@+id/imageview2"
                     android:layout_toRightOf="@+id/imageview2"
                     android:text="Himalayan First Look"
