--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -11,7 +11,8 @@
         android:layout_height="67dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:scaleType="centerCrop" />
+        android:padding="3dp"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/textView_bikeName"
