--- a/app/src/main/res/layout/activity_bikelist.xml
+++ b/app/src/main/res/layout/activity_bikelist.xml
@@ -37,7 +37,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:longClickable="true" />
+            android:longClickable="true"
+            android:divider="@color/medium_grey"
+            android:dividerHeight="1dp"/>
 
     </RelativeLayout>
 
